--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ body, html {
 .background {
     position: relative;
     height: 100%;
-    background-image: url('your-image-url-here.jpg');
-    filter: blur(5px);
+    background-image: url('https://cdn.discordapp.com/attachments/1104493356781940766/1139636421443985478/image.png');
+    filter: blur(0px);
     display: flex;
     justify-content: center;
     align-items: center;
